修复了药品和食物历史记录的bug